"""
ZeroG Storage gRPC client.

This is a thin wrapper around the ZeroG sidecar gRPC service.
The sidecar translates between gRPC and the native ZeroG Go SDK.
"""

from typing import Dict, Optional

from chaoschain_integrations.common.config import ZeroGConfig
from chaoschain_integrations.common.errors import (
    ConnectionError,
    ResourceNotFoundError,
    TimeoutError,
)
from chaoschain_integrations.common.logging import get_logger
from chaoschain_integrations.storage.zerog.schemas import (
    ZeroGExistsResponse,
    ZeroGGetResponse,
    ZeroGProofResponse,
    ZeroGPutResponse,
)

logger = get_logger(__name__)


class ZeroGStorageClient:
    """
    Client for ZeroG storage sidecar.

    TODO: Generate actual gRPC stubs from proto/zerog_storage.proto
    For now, this is a mock implementation that demonstrates the interface.
    """

    def __init__(
        self,
        grpc_url: Optional[str] = None,
        api_key: Optional[str] = None,
        timeout_seconds: Optional[int] = None,
    ) -> None:
        """
        Initialize ZeroG storage client.

        Args:
            grpc_url: gRPC endpoint (e.g., "localhost:50051")
            api_key: Optional API key for authentication
            timeout_seconds: Default timeout for requests
        """
        config = ZeroGConfig()
        self.grpc_url = grpc_url or config.grpc_url
        self.api_key = api_key or config.api_key
        self.timeout = timeout_seconds or config.timeout_seconds

        logger.info(
            "zerog_storage_client_init",
            grpc_url=self.grpc_url,
            timeout=self.timeout,
        )

    def put(
        self,
        content: bytes,
        metadata: Optional[Dict] = None,
        timeout_s: Optional[int] = None,
    ) -> ZeroGPutResponse:
        """
        Store content in ZeroG.

        TODO: Implement actual gRPC call to sidecar.
        """
        import hashlib
        import time

        timeout = timeout_s or self.timeout

        logger.info(
            "zerog_storage_put",
            content_size=len(content),
            timeout=timeout,
        )

        # Mock response - replace with actual gRPC call
        content_hash = hashlib.sha256(content).hexdigest()
        file_id = f"zerog_{content_hash[:16]}"

        return ZeroGPutResponse(
            file_id=file_id,
            root_hash=content_hash,
            merkle_proof={"layers": [], "indices": []},
            size_bytes=len(content),
            timestamp=int(time.time()),
        )

    def get(
        self,
        file_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGGetResponse:
        """
        Retrieve content from ZeroG.

        TODO: Implement actual gRPC call to sidecar.
        """
        timeout = timeout_s or self.timeout

        logger.info(
            "zerog_storage_get",
            file_id=file_id,
            timeout=timeout,
        )

        # Mock response - replace with actual gRPC call
        # In real implementation, this would fail if file doesn't exist
        raise ResourceNotFoundError(
            f"File not found: {file_id}",
            adapter_name="zerog_storage",
            details={"file_id": file_id},
        )

    def exists(
        self,
        file_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGExistsResponse:
        """
        Check if file exists in ZeroG.

        TODO: Implement actual gRPC call to sidecar.
        """
        timeout = timeout_s or self.timeout

        logger.info(
            "zerog_storage_exists",
            file_id=file_id,
            timeout=timeout,
        )

        # Mock response - replace with actual gRPC call
        return ZeroGExistsResponse(exists=False, size_bytes=None)

    def get_proof(
        self,
        file_id: str,
        timeout_s: Optional[int] = None,
    ) -> ZeroGProofResponse:
        """
        Get storage proof for file.

        TODO: Implement actual gRPC call to sidecar.
        """
        timeout = timeout_s or self.timeout

        logger.info(
            "zerog_storage_get_proof",
            file_id=file_id,
            timeout=timeout,
        )

        # Mock response - replace with actual gRPC call
        import hashlib
        import time

        return ZeroGProofResponse(
            file_id=file_id,
            root_hash=hashlib.sha256(file_id.encode()).hexdigest(),
            merkle_proof={"layers": [], "indices": []},
            timestamp=int(time.time()),
        )

